# khoahoc-rs

./: .gitignore  Cargo.toml  README.md  TODO  themes.yml
src/: generator.rs  main.rs  manifest.rs  models.rs  renderer.rs  server.rs
src/parser/: markdown.rs  mod.rs  navigation.rs
templates/: base.html  course.html  index.html  lesson.html  path.html
templates/static/: search.js  style.css  theme.js
